ncc/testsuite/positive/bug-1153.n
module Bug1153
{
  class B1153 { public Foo : int -> int  = fun(x) { x }; }
  
  Main() : void { System.Console.WriteLine(B1153().Foo(1)); }
}

public module C1153 
{
  public Foo(this _ : string) : string { "A" }
}

/*
BEGIN-OUTPUT
1
END-OUTPUT
*/
