ncc/testsuite/negative/bug-0664.n
class Base {
  public this (_ : Base) {
  }
}

class Inh : Base {
  public this () {
    base (this) // E: ``this'' or ``base'' usage before base is constructed
  }
}

class A
{
  protected x : int;
  protected y () : int { 
    1 
  }
  public this( x : int = 10 ) {
    this.x = x;
  }
}

class B : A
{
  new x : int;
  new y () : int {
    1
  }
  public this()
  {
    this.x = 1;
    _ = base; // E: ``this'' or ``base'' usage before base is constructed
    _ = this; // E: ``this'' or ``base'' usage before base is constructed
    _ = base.x; // E: using base class field before base is constructed
    _ = this.x;
    System.Console.WriteLine ($"base.x = $(base.x)"); // E: using base class field before base is constructed
    _ = base.y (); // E: using base class method before base is constructed
    _ = this.y (); // E: using class method before base is constructed
    
    base (1);
    
    _ = base;
    _ = this;
    _ = base.x;
    _ = this.x;
    System.Console.WriteLine ($"base.x = $(base.x)");
    _ = base.y ();
    _ = this.y ();
  }
}

class C
{
  x : int { get; set; };
  y : int = x; // E: using class method before base is constructed
}
 
